--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     
 
                     <div class="platform" id="readme" style="text-align: center;">
-                        You can findsadsadasdsad the documentation and how to setup ChatRD <a target="_blank" href="https://github.com/vortisrd/chatrd/blob/main/README.md">right here</a>.
+                        Puede encontrar la documentación y cómo configurar ChatRD <a target="_blank" href="https://github.com/vortisrd/chatrd/blob/main/README.md">aqui</a>.
                     </div>
 
 
