--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 
                         <div class="setup">
                             <div class="config">
-                                <label>Servidor</label>
+                                <label>Server</label>
                                 <input type="text" name="streamerBotServerAddress" value="127.0.0.1" class="avoid">
                             </div>
                             <div class="config">
-                                <label>Puerto</label>
+                                <label>Port</label>
                                 <input type="text" name="streamerBotServerPort" value="8080" class="avoid">
                             </div>
                         </div>
