--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <div id="container">
         <div class="wrapper">
             <div id="settings">
-                <div class="title"><h1>ChatJR</h1></div>
+                <div class="title"><h1>ChatRD</h1></div>
 
                 
                 <form>
                     
 
                     <div class="platform" id="readme" style="text-align: center;">
-                        Puede encontrar la documentación y cómo configurar ChatJR <a target="_blank" href="https://github.com/vortisrd/chatrd/blob/main/README.md">aqui</a>.
+                        You can find the documentation and how to setup ChatRD <a target="_blank" href="https://github.com/vortisrd/chatrd/blob/main/README.md">right here</a>.
                     </div>
 
 
@@ -89,11 +89,11 @@
                             <div class="config"></div>
 
                             <div class="config">
-                                <label>Servidor</label>
+                                <label>Server</label>
                                 <input type="text" name="speakerBotServerAddress" value="127.0.0.1">
                             </div>
                             <div class="config">
-                                <label>Puerto</label>
+                                <label>Port</label>
                                 <input type="text" name="speakerBotServerPort" value="7580">
                             </div>
 
