--- a/index.html
+++ b/index.html
@@ -867,18 +867,17 @@
                 <button onclick="copyUrl()">Copy URL</button>
             </div>
 
-            <p>Made with ❤️ by <strong>VortisRD</strong></p>
+            <p>Creado con ❤️ por <strong>JotaRodriii</strong></p>
             <p>
-                <a target="_blank" href="https://twitch.com/vortisrd"><i class="fa-brands fa-twitch"></i></a>
-                <a target="_blank" href="https://youtube.com/@vortisrd"><i class="fa-brands fa-youtube"></i></a>
-                <a target="_blank" href="https://tiktok.com/@vortisrd"><i class="fa-brands fa-tiktok"></i></a>
-                <a target="_blank" href="https://kick.com/vortisrd">
+                <a target="_blank" href="https://twitch.com/JotaRodriii"><i class="fa-brands fa-twitch"></i></a>
+                <a target="_blank" href="https://youtube.com/@JotaRodriii"><i class="fa-brands fa-youtube"></i></a>
+                <a target="_blank" href="https://tiktok.com/@JotaRodriii"><i class="fa-brands fa-tiktok"></i></a>
+                <a target="_blank" href="https://kick.com/JotaRodriii">
                     <svg id="Layer_1" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 800 800">
                         <polygon class="st0" points="336 111 336 239 401 239 401 175 465 175 465 111 657 111 657 303 593 303 593 367 529 367 529 432 593 432 593 496 657 496 657 689 465 689 465 624 401 624 401 560 336 560 336 689 143 689 143 111 336 111"/>
                     </svg>
                 </a>
-                <a target="_blank" href="https://x.com/vortisrd"><i class="fa-brands fa-x-twitter"></i></a>
-                <a target="_blank" href="https://github.com/vortisrd"><i class="fa-brands fa-github"></i></a>
+                <a target="_blank" href="https://x.com/JotaRodriii"><i class="fa-brands fa-x-twitter"></i></a>
             </p>
         </footer>
     </div>
