--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
 
                         <div class="setup">
 
-                            <div class="config"><label>Scroll Bar<br><small>Adds a scrollbar.</small></label></label><label class="switch"><input type="checkbox" name="chatScrollBar"><span class="slider"></span></label></div>
+                            <div class="config"><label>Scroll Bar<br><small>Barra de desplazamiento.</small></label></label><label class="switch"><input type="checkbox" name="chatScrollBar"><span class="slider"></span></label></div>
 
                             <div class="config">
-                                <label>Size<br><small>Changes ChatRD's size</small></label>
+                                <label>Size<br><small>Tamaño chat</small></label>
                                 <label>
                                     <input type="range" id="font-slider" name="chatFontSize" min="0.1" max="3" step="0.1" value="1">
                                     <br><em id="font-value" class="slider-value">100%</em>
@@ -164,14 +164,14 @@
                             </div>
 
                             <div class="config">
-                                <label>Font Family<br><small>Changes ChatRD's Font</small></label>
+                                <label>Font Family<br><small>Fuente Chat</small></label>
                                 <label>
                                     <input type="text" name="chatFontFamily" value="DM Sans">
                                 </label>
                             </div>
 
                             <div class="config">
-                                <label>Background Color<br><small>Changes ChatRD's background color</small></label>
+                                <label>Background Color<br><small>Cambio fondo Chat</small></label>
                                 <label>
                                     <input type="color" name="chatBackground" value="#121212">
                                 </label>
@@ -180,7 +180,7 @@
                             <div class="config">
                                 <label>
                                     <i class="fa-solid fa-arrow-turn-up"></i> Background Opacity<br>
-                                    <small>Changes ChatRD's background color opacity</small>
+                                    <small>Cambia opacidad fondo Chat</small>
                                 </label>
                                 <label>
                                     <input type="range" id="bg-opacity-slider" name="chatBackgroundOpacity" min="0.0" max="1" step="0.1" value="1">
@@ -206,7 +206,7 @@
                             </div>
 
                             <div class="config">
-                                <label>Platforms<br><small>Shows the platforms logos.</small></label>
+                                <label>Platforms<br><small>Visionado de iconos de plataforma.</small></label>
                                 <label class="switch"><input type="checkbox" name="showPlatform" checked><span class="slider"></span></label>
                             </div>
 
