--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                             
                             <div class="config">
                                 <label>
-                                    One Line<br><small>One line chat instead of two in Vertical Chat.</small>
+                                    One Line<br><small>Chat de una línea en lugar de dos en el chat vertical.</small>
                                 </label>
                                 <label class="switch"><input type="checkbox" name="chatOneLine"><span class="slider"></span></label>
                             </div>
@@ -199,14 +199,14 @@
                             
                             <div class="config">
                                 <label>
-                                    Horizontal Direction<br><small>Chat/Events will be horizontal.<br>
+                                    Horizontal Direction<br><small>El chat y los eventos serán horizontales.<br>
                                     <strong><u>If enabled, it disables "One Line" option above.</u></strong></small>
                                 </label>
                                 <label class="switch"><input type="checkbox" name="chatHorizontal"><span class="slider"></span></label>
                             </div>
 
                             <div class="config">
-                                <label>Platforms<br><small>Visionado de iconos de plataforma.</small></label>
+                                <label>Platforms<br><small>Iconos de plataforma.</small></label>
                                 <label class="switch"><input type="checkbox" name="showPlatform" checked><span class="slider"></span></label>
                             </div>
 
@@ -238,40 +238,40 @@
                             </div>
 
                             <div class="config">
-                                <label>Platform Statistics<br><small>Shows all platform statistics.</small></label>
+                                <label>Platform Statistics<br><small>Estadísticas de plataforma.</small></label>
                                 <label class="switch"><input type="checkbox" name="showPlatformStatistics" checked><span class="slider"></span></label>
                             </div>
 
                             <div class="config">
-                                <label>Ignore Commands<br><small>Ignores texts starting with "!".</small></label>
+                                <label>Ignore Commands<br><small>Ignora el texto que empieza por "!".</small></label>
                                 <label class="switch"><input type="checkbox" name="excludeCommands" checked><span class="slider"></span></label>
                             </div>
 
                             <div class="config">
-                                <label>Ignore Chatters<br><small>Separate their names by commas. eg.: StreamLabs,StreamElements</small></label>
+                                <label>Ignore Chatters<br><small>Separa por comas, ej: StreamLabs,StreamElements</small></label>
                                 <input type="text" name="ignoreChatters" value="Streamlabs,Streamelements">
                             </div>
 
                             <div class="config">
-                                <label>Hide Chat Msg<br><small>Hides a message after X seconds. (0 disables it)</small></label>
+                                <label>Hide Chat Msg<br><small>Oculta un mensaje tras X segundos. (0 lo desactiva)</small></label>
                                 <input type="number" name="hideAfter" value="0">
                             </div>
 
                             <hr>
 
                             <div class="config">
-                                <label>Chat Field<br><small>Adds a chat field for you to type in your chat.</small></label>
+                                <label>Chat Field<br><small>Añade un campo de chat para que escribas tu mensaje..</small></label>
                                 <label class="switch"><input type="checkbox" name="chatField"><span class="slider"></span></label>
                             </div>
 
                             <div class="config">
-                                <label>Moderation Buttons<br><small>Adds buttons for moderator actions.</small></label>
+                                <label>Moderation Buttons<br><small>Añade botones para las acciones del moderador..</small></label>
                                 <label class="switch"><input type="checkbox" name="chatModeration"><span class="slider"></span></label>
                             </div>
 
                             <div class="config">
                                 <small class="warning">
-                                    <i class="fa-solid fa-circle-info"></i> The Chat Field also accepts <strong>/commands</strong>. <strong><a target="_blank" href="https://github.com/vortisrd/chatrd#-commands-supported-by-the-chat-field">Commands Supported</a>.</strong>
+                                    <i class="fa-solid fa-circle-info"></i> El chat solo acepta <strong>/commands</strong>. <strong><a target="_blank" href="https://github.com/jotarodriii/chatrd#-commands-supported-by-the-chat-field">Comandos Soportados</a>.</strong>
                                 </small>
                             </div>
 
