--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
 
             <div class="url-bar">
                 <input type="text" id="outputUrl" placeholder="URL Here..." readonly="">
-                <button onclick="copyUrl()">Copy URL</button>
+                <button onclick="copyUrl()">Copia URL</button>
             </div>
 
             <p>Creado con ❤️ por <strong>JotaRodriii</strong></p>
